# rosight

./: .gitignore  CHANGELOG.md  DESIGN.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  docs.yml  release.yml
docs/: architecture.md  configuration.md  development.md  faq.md  feature_test.md  index.md  installation.md  keybindings.md  plotting.md  usage.md
scripts/: generate_screenshots.py
src/lazyros/: __init__.py  __main__.py  app.py  app.tcss  cli.py  config.py
src/lazyros/ros/: __init__.py  backend.py
src/lazyros/utils/: __init__.py  path.py
src/lazyros/widgets/: __init__.py  actions_panel.py  bags_panel.py  command_palette.py  help_screen.py  interfaces_panel.py  message_tree.py  nodes_panel.py  params_panel.py  plot_panel.py  plot_view.py  services_panel.py  tf_panel.py  topics_panel.py
src/lazyrosplus/: __init__.py  __main__.py  app.py  app.tcss  cli.py  config.py
src/lazyrosplus/ros/: __init__.py  backend.py  qos.py  stats.py
src/lazyrosplus/utils/: __init__.py  datatable.py
src/lazyrosplus/widgets/: __init__.py  actions_panel.py  bags_panel.py  command_palette.py  help_screen.py  interfaces_panel.py  message_tree.py  nodes_panel.py  params_panel.py  plot_panel.py  plot_view.py  services_panel.py  status_bar.py  tf_panel.py  topics_panel.py
src/rosight/: __init__.py  __main__.py  app.py  app.tcss  cli.py  config.py
src/rosight/ros/: __init__.py  backend.py  introspection.py
src/rosight/utils/: __init__.py  datatable.py  formatting.py  image_decode.py  ringbuffer.py
src/rosight/widgets/: __init__.py  actions_panel.py  bags_panel.py  help_screen.py  image_screen.py  interfaces_panel.py  message_tree.py  nodes_panel.py  params_panel.py  plot_panel.py  plot_view.py  services_panel.py  status_bar.py  tf_panel.py  topics_panel.py
tests/: conftest.py  test_app_smoke.py  test_array_snapshot.py  test_backend.py  test_config.py  test_formatting.py  test_image_decode.py  test_introspection.py  test_panel_actions.py  test_panel_actions_ros.py  test_path.py  test_plot_view.py  test_qos.py  test_ringbuffer.py  test_stats.py
