[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "rosight"
dynamic = ["version"]
description = "A lazygit-inspired terminal UI for ROS 2: topics, nodes, services, params, live message inspection and plotting."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "deyuf" }]
keywords = ["ros2", "tui", "textual", "robotics", "monitoring", "plotting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "textual>=0.79",
    "rich>=13.7",
    "plotext>=5.2",
    "pyyaml>=6.0",
    "tomli>=2.0;python_version<'3.11'",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
    "build>=1.2",
    "twine>=5.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.7",
]

[project.urls]
Homepage = "https://github.com/deyuf/rosight"
Documentation = "https://deyuf.github.io/rosight/"
Repository = "https://github.com/deyuf/rosight"
Issues = "https://github.com/deyuf/rosight/issues"

[project.scripts]
rosight = "rosight.cli:main"

[tool.hatch.version]
path = "src/rosight/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/rosight"]

[tool.hatch.build.targets.sdist]
include = [
    "src/rosight",
    "README.md",
    "LICENSE",
    "DESIGN.md",
    "CHANGELOG.md",
    "docs",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "PL", "RUF"]
ignore = [
    "PLR0913", "PLR2004", "PLR0912", "PLR0915", "PLR0911",
    "PLC0415", "E501", "SIM105", "SIM108", "B008",
    "RUF012",  # mutable class attrs are intentional in Textual widgets
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101", "E402", "B017"]

[tool.mypy]
python_version = "3.10"
strict_optional = true
# `type: ignore` sites are conditionally needed depending on whether rclpy /
# Textual stub versions are present, so don't warn when they appear unused.
warn_unused_ignores = false
ignore_missing_imports = true
check_untyped_defs = false
files = ["src/rosight"]

[[tool.mypy.overrides]]
module = "rosight.widgets.*"
# Textual widget bases use heavy dynamic typing; relaxed here.
disable_error_code = ["arg-type", "assignment", "return-value", "misc"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
# Don't escalate warnings to errors in CI: third-party libs (Textual, plotext,
# rclpy on different ROS distros) emit DeprecationWarnings that we don't own.
filterwarnings = [
    "default",
    "ignore::DeprecationWarning:pkg_resources.*",
    "ignore::DeprecationWarning:plotext.*",
    "ignore::ResourceWarning",
]

[tool.coverage.run]
branch = true
source = ["rosight"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
